Fix scrollbar not receiving mouse event in element picker
Not sure why I set z-index to 0; removed due to mouse
event not reaching the scrollbar.

--- a/src/css/epicker-ui.css
+++ b/src/css/epicker-ui.css
@@ -96,9 +96,6 @@ html#ublock0-epicker,
 .CodeMirror pre {
     padding: 0;
     }
-.CodeMirror-vscrollbar {
-    z-index: 0;
-    }
 
 #ublock0-epicker section .resultsetWidgets {
     display: flex;
